# esp32-remote

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/conn/: CMakeLists.txt  Kconfig.projbuild.template  conn.c  mqtt-conn.c
components/conn/include/: conn.h  general_user_settings.h  mqtt-conn.h
components/iperf/: idf_component.yml  iperf.c  wifi_stats.c
components/led-control/: CMakeLists.txt  led-control.c
components/led-control/include/: led-control.h
components/time-sync/: CMakeLists.txt  time-sync.c
components/time-sync/include/: time-sync.h
components/time_sync/: time_sync.c
main/: CMakeLists.txt  Kconfig.projbuild.template  general_user_settings.h  idf_component.yml  main.c  main.h  secret_user_settings.h
